# Programacion2

./: .gitignore  CMakeLists.txt  README.md  batalla-naval.cpp  calc.cpp  clock.cpp  gpp.sh  lib.cpp  lib.h  main.cpp  page.cpp  polim  polim.cpp  run  setup  test  test.sh
Programacion II/Ejercicios/: commands
Programacion II/Ejercicios/exercises/TP1/: grillo.cpp
Programacion II/Ejercicios/include/: mathf.h
Programacion II/Ejercicios/src/: mathf.cpp
aux-data/: last-test-name
custom-libs/mates/: CMakeLists.txt
custom-libs/mates/include/: range.h
custom-libs/mates/src/: utils.cpp
lib/: CMakeLists.txt
lib/mylib/: CMakeLists.txt
lib/mylib/include/mylib/: mymaths.h
lib/mylib/src/: mymaths.cpp
modules/: CMakeLists.txt
modules/mates/: CMakeLists.txt
modules/mates/include/: utils.h
modules/mates/src/: range.cpp
mylib/: CMakeLists.txt  mylib.cpp  mylib.h
samples/: CMakeLists.txt  template.cpp  test_range.cpp
samples/TP1/: u1e01.cpp  u1e02.cpp  u1e03.cpp  u1e04.cpp  u1e05.cpp  u1e07.cpp
samples/tests/: join_numbers.cpp  num.cpp  tweets.cpp
samples/tools/: make_copies.cpp
tests/: range.cpp
tools/: crear_e.cpp  play.cpp  quick  run.bat  run.cpp
